@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#567618 by smk-ka: Revised test cases. Abstracted out base web test class.
 by sun: Updated for removed registry, new admin paths.
 #326539 by sun: Updated for class attribute array.
 #552190 by Bartezz: Fixed missing t() for user logout link.
